Update with 9.0.7 files

--- a/html/C/authsvc/authenticator/ci/device_connected.html
+++ b/html/C/authsvc/authenticator/ci/device_connected.html
@@ -51,13 +51,13 @@
         <div class="dialog-window" style="z-index: 2000;">
             <section id="done-section" class="dialog-content dialog-content--visible">
                 <div class="layout-large-right">
-                    <h3>Success!</h3>
-                    <h1>Your device is connected</h1>
-                    <p class="type-body-m">Now you can use DEVICE_NAME to verify your identity as a second step when signing in.</p>
+                    <h3></h3><!-- Success! -->
+                    <h1></h1><!-- Your device is connected -->
+                    <p class="type-body-m"></p><!-- Now you can use DEVICE_NAME to verify your identity as a second step when signing in. -->
 
-                    <button onclick="submitDone();" class="button-1 button-bottom" type="button" tabindex="1">Done</button>
+                    <button onclick="submitDone();" class="button-1 button-bottom" type="button" tabindex="1"></button><!-- Done! -->
                 </div>
-                <div class="layout-left" style="background-color:#ECECEC;">
+                <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
                         <img src="./static/design_images/verify_approve.svg" class="launch-animation" />
                     </div>
