--- a/html/C/authsvc/authenticator/ci/try_push.html
+++ b/html/C/authsvc/authenticator/ci/try_push.html
@@ -111,26 +111,26 @@
         <div class="dialog-window notransition" style="z-index: 2000;">
             <section id="try-section" class="dialog-content dialog-content--visible notransition">
                 <div class="layout-large-right">
-                    <h3>Set up two-step verification</h3>
-                    <h1>Let's try it out</h1>
-                    <p class="type-body-m">A notification was sent to @DEVICE_NAME@. Approve the sign-in to continue. If you haven't received it yet, open IBM Verify.</p>
+                    <h3></h3><!-- Set up two-step verification -->
+                    <h1></h1><!-- Let's try it out -->
+                    <p class="type-body-m"></p><!-- A notification was sent to DEVICE_NAME. Approve the sign-in to continue. If you haven't received it yet, open IBM Verify. -->
 
                 </div>
-                <div class="layout-left" style="background-color:#ECECEC;">
+                <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
-                        <div class="loader" style="background-image: url('./static/loader_light.gif'); position:absolute; left:168px; top:-40px;"></div>
+                        <div class="loader loader-dark hidden"></div>
                     </div>
                 </div>
             </section>
             <section id="done-section" class="dialog-content">
                 <div class="layout-large-right">
-                    <h3>Success!</h3>
-                    <h1>Your device is connected</h1>
-                    <p class="type-body-m">Now you can use DEVICE_NAME to verify your identity as a second step when signing in.</p>
+                    <h3></h3><!-- Success! -->
+                    <h1></h1><!-- Your device is connected -->
+                    <p class="type-body-m"></p><!-- Now you can use DEVICE_NAME to verify your identity as a second step when signing in. -->
 
-                    <button onclick="submitDone();" class="button-1 button-bottom" type="button" tabindex="1">Done</button>
+                    <button onclick="submitDone();" class="button-1 button-bottom" type="button" tabindex="1"></button><!-- Done -->
                 </div>
-                <div class="layout-left" style="background-color:#ECECEC;">
+                <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
                         <img src="./static/design_images/devices_verify.svg" class="launch-animation" />
                     </div>
