--- a/html/C/authsvc/authenticator/ci/authenticate_dialog.html
+++ b/html/C/authsvc/authenticator/ci/authenticate_dialog.html
@@ -63,6 +63,8 @@
                 method_div.type = type;
 
                 method_div.onclick = function () {
+                    document.querySelector(".layout-left .loader").classList.remove('hidden');
+                    document.querySelector(".layout-left .welcome-illustrations .launch-animation").classList.add('hidden');
                     document.getElementById("chooseMethodForm").type.value = this.type;
                     document.getElementById("chooseMethodForm").id.value = this.id;
                     document.getElementById("chooseMethodForm").submit();
@@ -130,6 +132,8 @@
                 method_div.type = type;
 
                 method_div.onclick = function () {
+                    document.querySelector(".layout-left .loader").classList.remove('hidden');
+                    document.querySelector(".layout-left .welcome-illustrations .launch-animation").classList.add('hidden');
                     document.getElementById("chooseMethodForm").type.value = this.type;
                     document.getElementById("chooseMethodForm").id.value = this.id;
                     document.getElementById("chooseMethodForm").submit();
@@ -176,11 +180,19 @@
                 transient_value = transient_methods[i][transient_method];
             }
 
+            if("@HIDE_TRANSIENT_IF_ENROLL@" == "true" && (
+                    (transient_method == "transientsms" && sms_method_div.children.length > 1) ||
+                    (transient_method == "transientemail" && email_method_div.children.length > 1))) {
+                continue;
+            }
+
             var method_div = document.createElement('div');
             method_div.className = "line-method";
             method_div.type = transient_method;
 
             method_div.onclick = function () {
+                document.querySelector(".layout-left .loader").classList.remove('hidden');
+                document.querySelector(".layout-left .welcome-illustrations .launch-animation").classList.add('hidden');
                 document.getElementById("chooseMethodForm").type.value = this.type;
                 document.getElementById("chooseMethodForm").submit();
             };
@@ -208,7 +220,7 @@
             link_div.className = "method-link";
             link_div.href = "javascript:void(0);";
             link_div.textContent = ciMsg.sendCode;
-            link_div.id = id;
+            link_div.id = transient_method;
             link_div.type = transient_method;
 
             method_div.appendChild(link_div);
@@ -267,7 +279,6 @@
     <style>
         .type-body-m {
             font-size: 10pt !important;
-            margin-left:12px !important;
         }
         a {color: #0F6DFF !important;}
     </style>
@@ -278,19 +289,17 @@
         <div class="dialog-window" style="z-index: 2000;">
             <section class="dialog-content dialog-content--visible" role="main" aria-label="Instructions for this step">
 
-                <div class="layout-left" style="background-color: #ECECEC;">
+                <div class="layout-left" style="background-color: #1d3649;">
                     <div class="welcome-illustrations">
-                        <div class="loader hidden" style="background-image: url('./static/loader_light.gif'); position:absolute; left:168px; top:-40px;"></div>
+                        <div class="loader loader-dark hidden"></div>
                         <img src="./static/design_images/credentials_devices.svg" class="launch-animation" />
                     </div>
                 </div>
 
                 <div class="layout-large-right">
-                    <h3 style="margin-left:12px;">Two-step verification</h3>
-                    <h1 style="margin-top:4px; margin-left:12px;">Choose a method</h1>
-                    <p id="verify-question" class="type-body-m">
-                        How would you like to verify it's you?
-                    </p>
+                    <h3></h3><!-- Two-step verification -->
+                    <h1 style="margin-top:4px;"></h1><!-- Choose a method -->
+                    <p id="verify-question" class="type-body-m"> </p><!-- How would you like to verify it's you? -->
                     <div id="verify-method-container" class="line-method-container hidden" style="margin-top: 30px;">
                     </div>
                     <div id="totp-method-container" class="line-method-container hidden">
@@ -300,14 +309,10 @@
                     <div id="email-method-container" class="line-method-container hidden">
                     </div>
                     <div id="empty-method-container" class="hidden">
-                    <p class="type-body-m">
-                        Whoops, looks like you have no methods registered!
-                    </p>
+                    <p class="type-body-m"></p><!-- Whoops, looks like you have no methods registered! -->
                     </div>
                     <div id="jit-enrollment-container" class="hidden">
-                    <p class="type-body-m">
-                        Want to use a different method? <a href="javascript:void(0);" onclick="enrollPrompt()">Enroll now</a>
-                    </p>
+                    <p class="type-body-m"></p><!-- Want to use a different method? Enroll now -->
                     </div>
                 </div>
             </section>
