--- a/html/C/authsvc/authenticator/ci/device_connected.html
+++ b/html/C/authsvc/authenticator/ci/device_connected.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
-                        <img src="./static/design_images/verify_approve.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/verify_approve.svg" class="launch-animation" />
                     </div>
                 </div>
             </section>
