--- a/html/C/authsvc/authenticator/ci/jit_enroll.html
+++ b/html/C/authsvc/authenticator/ci/jit_enroll.html
@@ -244,13 +244,13 @@
                     <p class="type-body-m" style="font-size:12pt"></p><!-- Faster, more secure and easy to set up! Verify your identity with a simple tap on your iOS or Android device using the IBM Verify app. -->
                     <button id="verify-button" class="button-1" onclick="enroll('verify')" type="button" tabindex="0" disabled></button><!-- Set Up -->
                     <div class="welcome-illustrations">
-                        <img style="height:120px;" src="./static/design_images/devices_verify.svg" class="launch-animation" />
+                        <img style="height:120px;" src="@JUNCTION@/sps/static/design_images/devices_verify.svg" class="launch-animation" />
                     </div>
                     <div class="loader loader-dark hidden"></div>
                 </div>
                 <div class="layout-bottom" style="display:flex;">
                     <div id="totp-method-container" class="method-box hidden">
-                        <img src="./static/design_images/credentials_devices.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/credentials_devices.svg" class="launch-animation" />
                         <div class="line-method">
                             <b></b><!-- Generated Code -->
                         </div>
@@ -258,7 +258,7 @@
                         <a id="totp-button" class="method-link" href="javascript:void(0);" onclick="enroll('totp')"></a><!-- Set up -->
                     </div>
                     <div id="sms-method-container" class="method-box hidden">
-                        <img src="./static/design_images/credentials_bubble.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/credentials_bubble.svg" class="launch-animation" />
                         <div class="line-method">
                             <b></b><!-- Text message -->
                         </div>
@@ -266,7 +266,7 @@
                         <a id="sms-button" class="method-link" href="javascript:void(0);" onclick="enroll('smsotp')"></a><!-- Set up -->
                     </div>
                     <div id="email-method-container" class="method-box hidden">
-                        <img src="./static/design_images/envelope-open.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/envelope-open.svg" class="launch-animation" />
                         <div class="line-method">
                             <b>Email</b><!-- Email -->
                         </div>
@@ -280,7 +280,7 @@
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
-                        <img src="./static/design_images/envelope-open.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/envelope-open.svg" class="launch-animation" />
                     </div>
                 </div>
                 <div class="layout-large-right">
@@ -296,7 +296,7 @@
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
-                        <img src="./static/design_images/credentials_bubble.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/credentials_bubble.svg" class="launch-animation" />
                     </div>
                 </div>
                 <div class="layout-large-right">
