--- a/html/C/authsvc/authenticator/ci/login.html
+++ b/html/C/authsvc/authenticator/ci/login.html
@@ -70,7 +70,7 @@
                 <div class="layout-large-right">
                     <h3></h3><!-- Welcome! -->
                     <h1></h1><!-- Sign in -->
-                    <p id="instructions" class="type-body-m"></p><!-- Sign in with your Cloud Identity credentials. -->
+                    <p id="instructions" class="type-body-m"></p><!-- Sign in with your IBM Security Verify credentials. -->
 
                     <p style="margin-top:40px;margin-bottom:8px;font-size:8pt"></p><!-- Username -->
                     <input class="ci-input" type="text" name="username" id="username" maxlength="40" oninput="enableButton()" value="@USERNAME@" autofocus/>
@@ -81,7 +81,7 @@
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
-                        <img src="./static/design_images/credentials.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/credentials.svg" class="launch-animation" />
                     </div>
                 </div>
             </section>
