--- a/html/C/authsvc/authenticator/ci/username.html
+++ b/html/C/authsvc/authenticator/ci/username.html
@@ -64,7 +64,7 @@
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
-                        <img src="./static/design_images/credentials.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/credentials.svg" class="launch-animation" />
                     </div>
                 </div>
             </section>
