--- a/html/C/authsvc/authenticator/ci/verify_registration.html
+++ b/html/C/authsvc/authenticator/ci/verify_registration.html
@@ -202,10 +202,10 @@
                 </div>
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
-                        <img style="margin-top:-50px; margin-bottom:16px;" src="./static/design_images/device-phone-ibm-verify.svg" class="download-app"/>
+                        <img style="margin-top:-50px; margin-bottom:16px;" src="@JUNCTION@/sps/static/design_images/device-phone-ibm-verify.svg" class="download-app"/>
                         <div class="app-store-links" style="margin-left:32px;">
-                            <a href="https://itunes.apple.com/us/app/ibm-verify/id1162190392" style="margin-right:16px;"><img style="width:auto;" src="./static/design_images/apple_app_store.svg" /></a>
-                            <a href="https://play.google.com/store/apps/details?id=com.ibm.security.verifyapp"><img style="width:auto;" src="./static/design_images/google_play_badge.svg" /></a>
+                            <a href="https://itunes.apple.com/us/app/ibm-verify/id1162190392" style="margin-right:16px;"><img style="width:auto;" src="@JUNCTION@/sps/static/design_images/apple_app_store.svg" /></a>
+                            <a href="https://play.google.com/store/apps/details?id=com.ibm.security.verifyapp"><img style="width:auto;" src="@JUNCTION@/sps/static/design_images/google_play_badge.svg" /></a>
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                     <div class="example-animation">
                         <div id="qrCode" class="qr-code">
                             <div class="success-check" style="margin-top:-20px;">
-                                <img src="./static/design_images/confirmation_check.svg" alt="confirmation" />
+                                <img src="@JUNCTION@/sps/static/design_images/confirmation_check.svg" alt="confirmation" />
                             </div>
                             <img class="qr-img" src="data:image/png;base64,@QRCODE@"></img>
                             <span class="scan" style="color:#ffffff"><b></b></span><!-- Scan me! -->
@@ -244,7 +244,7 @@
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
-                        <img src="./static/design_images/credentials_devices.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/credentials_devices.svg" class="launch-animation" />
                     </div>
                 </div>
                 <div class="layout-large-right">
