--- a/html/C/authsvc/authenticator/ci/authenticate_dialog.html
+++ b/html/C/authsvc/authenticator/ci/authenticate_dialog.html
@@ -53,8 +53,8 @@
             var id = method['id'];
             var creationDate = new Date(method['creationTime']);
 
-            var type = method['methodType'];
-            var enabled = method['isEnabled'];
+            var type = method['type'];
+            var enabled = method['enabled'];
 
             if(type != "signature" && enabled) {
                 var method_div = document.createElement('div');
@@ -83,10 +83,10 @@
                 var extraInfo = "";
                 if(type == "emailotp") {
                     prettyType = ciMsg["email"];
-                    extraInfo = method['attributes'].otpDeliveryEmailAddress;
+                    extraInfo = method['attributes'].emailAddress;
                 } else if(type == "smsotp") {
                     prettyType = ciMsg["textMessage"];
-                    extraInfo = method['attributes'].otpDeliveryMobileNumber;
+                    extraInfo = method['attributes'].phoneNumber;
                 }
                 extraInfo = extraInfo.replace(/\*/g, "•");
 
@@ -123,7 +123,7 @@
 
             var enabled = authenticator['enabled'];
             if(enabled) {
-                var type = signature_method["methodType"];
+                var type = signature_method["type"];
                 var subType = signature_method["subType"];
 
                 var method_div = document.createElement('div');
@@ -292,7 +292,7 @@
                 <div class="layout-left" style="background-color: #1d3649;">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
-                        <img src="./static/design_images/credentials_devices.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/credentials_devices.svg" class="launch-animation" />
                     </div>
                 </div>
 
