--- a/html/C/authsvc/authenticator/ci/try_push.html
+++ b/html/C/authsvc/authenticator/ci/try_push.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="layout-left" style="background-color:#1d3649;">
                     <div class="welcome-illustrations">
-                        <img src="./static/design_images/devices_verify.svg" class="launch-animation" />
+                        <img src="@JUNCTION@/sps/static/design_images/devices_verify.svg" class="launch-animation" />
                     </div>
                 </div>
             </section>
